fixed FandD page with text overlap

--- a/FandD/style.css
+++ b/FandD/style.css
@@ -346,8 +346,8 @@ body{
 #Mars{
     
     line-height: 1;
-    font-size: .84rem;
-    top: 5%;
+    font-size: .83rem;
+    top: 3%;
 }
 #Mars u{
     font-size: smaller;
@@ -388,8 +388,8 @@ body{
 #Mars{
     
     line-height: 1;
-    font-size: .84rem;
-    top: 5%;
+    font-size: .83rem;
+    top: 3%;
 }
 #Mars u{
     font-size: small;
